{
  "title": "Приклад простору імен"
}