{
  "label": {
    "main": "Напис з іншого простору імен"
  }
}