...
                    onPressed: () {
                      network_example.main();
                    },
                    child: const Text("Run `network` example"),
                  ),
                  ElevatedButton(
                    key: const Key('nameSpaceExample'),
                    onPressed: () {
                      namespace_example.main();
                    },
                    child: const Text("Run `namespace` example"),
                  ),
                  ElevatedButton(
...
